force-app/main/default/objects/Amendment__c/fields/All_Amendments_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Amendments_Completed_Date__c</fullName>
    <label>All Amendments Completed Date</label>
    <type>Date</type>
</CustomField>