force-app/main/default/objects/Amendment__c/fields/Amd_Analysis_Lmtd_to_Described_Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Amd_Analysis_Lmtd_to_Described_Phenotype__c</fullName>
    <label>Amd Analysis Lmtd to Described Phenotype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per Research Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>