force-app/main/default/objects/Amendment__c/fields/Amd_External_Can_Share_Phenotype_Data__c.field-meta.xml
<CustomField>
    <fullName>Amd_External_Can_Share_Phenotype_Data__c</fullName>
    <label>Amd External Can Share Phenotype Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>