force-app/main/default/objects/Amendment__c/fields/Amd_RGC_Can_Perform_Mega_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_Can_Perform_Mega_Analyses__c</fullName>
    <label>Amd RGC Can Perform Mega Analyses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Consent</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>