force-app/main/default/objects/Amendment__c/fields/Amd_RGC_Can_Perform_Phenotype_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_Can_Perform_Phenotype_Analyses__c</fullName>
    <label>Amd RGC Can Perform Phenotype Analyses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>