force-app/main/default/objects/Amendment__c/fields/Amd_RGC_Can_Share_Results_w_Comm_Source__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_Can_Share_Results_w_Comm_Source__c</fullName>
    <label>Amd RGC Can Share Results w/ Comm Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>