force-app/main/default/objects/Amendment__c/fields/Amd_RGC_Can_Upload_Results_to_RGC_Dbases__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_Can_Upload_Results_to_RGC_Dbases__c</fullName>
    <label>Amd RGC Can Upload Results to RGC Dbases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>