force-app/main/default/objects/Amendment__c/fields/Amd_RGC_Req_to_Share_Results_with_Collab__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_Req_to_Share_Results_with_Collab__c</fullName>
    <label>Amd RGC Req to Share Results with Collab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>