force-app/main/default/objects/Amendment__c/fields/Amd_RGC_To_ReturnDestroy_Sample_at_Term__c.field-meta.xml
<CustomField>
    <fullName>Amd_RGC_To_ReturnDestroy_Sample_at_Term__c</fullName>
    <label>Amd RGC To Return/Destroy Sample at Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per RCA Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>