force-app/main/default/objects/Amendment__c/fields/Amendment_Active__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Active__c</fullName>
    <formula>OR( 
   AND ( TODAY() &gt; Effective_Date__c, TODAY() &lt; Termination_Date__c ),
   AND ( ISNULL ( Effective_Date__c ), TODAY() &lt; Termination_Date__c )
)</formula>
    <label>Amendment Active</label>
    <type>Checkbox</type>
</CustomField>