force-app/main/default/objects/Amendment__c/fields/Amendment_AgeRelated_Macular_Degeneratn__c.field-meta.xml
<CustomField>
    <fullName>Amendment_AgeRelated_Macular_Degeneratn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment AgeRelated Macular Degenerat&apos;n</label>
    <type>Checkbox</type>
</CustomField>