force-app/main/default/objects/Amendment__c/fields/Amendment_Agnostic_Description__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Agnostic_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Agnostic Description</label>
    <type>Checkbox</type>
</CustomField>