force-app/main/default/objects/Amendment__c/fields/Amendment_Autism__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Autism__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Autism</label>
    <type>Checkbox</type>
</CustomField>