force-app/main/default/objects/Amendment__c/fields/Amendment_Birdshot__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Birdshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Birdshot</label>
    <type>Checkbox</type>
</CustomField>