force-app/main/default/objects/Amendment__c/fields/Amendment_Budget_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Budget_Assessment__c</fullName>
    <label>Amendment Budget Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Need More Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>