force-app/main/default/objects/Amendment__c/fields/Amendment_Budget_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Budget_Assessment_Date__c</fullName>
    <label>Amendment Budget Assessment Date</label>
    <type>Date</type>
</CustomField>