force-app/main/default/objects/Amendment__c/fields/Amendment_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Cancer</label>
    <type>Checkbox</type>
</CustomField>