force-app/main/default/objects/Amendment__c/fields/Amendment_Cases__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Cases__c</fullName>
    <inlineHelpText>Please enter the net added or removed # of Cases per Amendment. If removing Cases, key in negative number.</inlineHelpText>
    <label>Amendment Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>