force-app/main/default/objects/Amendment__c/fields/Amendment_Chronic_Liver_Disease__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Chronic_Liver_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Chronic Liver Disease</label>
    <type>Checkbox</type>
</CustomField>