force-app/main/default/objects/Amendment__c/fields/Amendment_CLIA_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Amendment_CLIA_Capabilities__c</fullName>
    <label>Amendment CLIA Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>