force-app/main/default/objects/Amendment__c/fields/Amendment_Collab_Description_Other__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Collab_Description_Other__c</fullName>
    <label>Amendment Collab Description Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>