force-app/main/default/objects/Amendment__c/fields/Amendment_Collab_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Collab_Status_Updated_Date__c</fullName>
    <label>Amendment Collab Status Updated Date</label>
    <type>Date</type>
</CustomField>