force-app/main/default/objects/Amendment__c/fields/Amendment_Collaboration_Scope_Other__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Collaboration_Scope_Other__c</fullName>
    <label>Amendment Collaboration Scope Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>