force-app/main/default/objects/Amendment__c/fields/Amendment_Collaboration_Status__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Collaboration_Status__c</fullName>
    <label>Amendment Collaboration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>End of Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>