force-app/main/default/objects/Amendment__c/fields/Amendment_Controls__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Controls__c</fullName>
    <inlineHelpText>Please enter the net added or removed # of Controls per Amendment. If removing Controls, key in negative number.</inlineHelpText>
    <label>Amendment Controls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>