force-app/main/default/objects/Amendment__c/fields/Amendment_Coronary_Artery_Disease__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Coronary_Artery_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Coronary Artery Disease</label>
    <type>Checkbox</type>
</CustomField>