force-app/main/default/objects/Amendment__c/fields/Amendment_CV_Signoff_at_ROP_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_CV_Signoff_at_ROP_Date__c</fullName>
    <label>Amendment CV Signoff at ROP Date</label>
    <type>Date</type>
</CustomField>