force-app/main/default/objects/Amendment__c/fields/Amendment_Develop_Research_Plan__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Develop_Research_Plan__c</fullName>
    <label>Amendment Develop Research Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>