force-app/main/default/objects/Amendment__c/fields/Amendment_Diabetic_Retinopathy__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Diabetic_Retinopathy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Diabetic Retinopathy</label>
    <type>Checkbox</type>
</CustomField>