force-app/main/default/objects/Amendment__c/fields/Amendment_Endometriosis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Endometriosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Endometriosis</label>
    <type>Checkbox</type>
</CustomField>