force-app/main/default/objects/Amendment__c/fields/Amendment_Genotyping__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Genotyping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Genotyping</label>
    <type>Checkbox</type>
</CustomField>