force-app/main/default/objects/Amendment__c/fields/Amendment_Giant_Cell_Arteritis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Giant_Cell_Arteritis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Giant Cell Arteritis</label>
    <type>Checkbox</type>
</CustomField>