force-app/main/default/objects/Amendment__c/fields/Amendment_Glaucoma__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Glaucoma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Glaucoma</label>
    <type>Checkbox</type>
</CustomField>