force-app/main/default/objects/Amendment__c/fields/Amendment_Hidradenitis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Hidradenitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Hidradenitis</label>
    <type>Checkbox</type>
</CustomField>