force-app/main/default/objects/Amendment__c/fields/Amendment_HLA_Typing__c.field-meta.xml
<CustomField>
    <fullName>Amendment_HLA_Typing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment HLA Typing</label>
    <type>Checkbox</type>
</CustomField>