force-app/main/default/objects/Amendment__c/fields/Amendment_ICF_Certification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_ICF_Certification_Start_Date__c</fullName>
    <label>Amendment ICF Certification Start Date</label>
    <type>Date</type>
</CustomField>