force-app/main/default/objects/Amendment__c/fields/Amendment_ICF_Link__c.field-meta.xml
<CustomField>
    <fullName>Amendment_ICF_Link__c</fullName>
    <label>Amendment ICF Link</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>