force-app/main/default/objects/Amendment__c/fields/Amendment_Inflammatory_Bowel_Disease__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Inflammatory_Bowel_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Inflammatory Bowel Disease</label>
    <type>Checkbox</type>
</CustomField>