force-app/main/default/objects/Amendment__c/fields/Amendment_Keloids__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Keloids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Keloids</label>
    <type>Checkbox</type>
</CustomField>