force-app/main/default/objects/Amendment__c/fields/Amendment_Longevity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Longevity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Longevity</label>
    <type>Checkbox</type>
</CustomField>