force-app/main/default/objects/Amendment__c/fields/Amendment_Lupus__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Lupus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Lupus</label>
    <type>Checkbox</type>
</CustomField>