force-app/main/default/objects/Amendment__c/fields/Amendment_Monogenic__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Monogenic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Monogenic</label>
    <type>Checkbox</type>
</CustomField>