force-app/main/default/objects/Amendment__c/fields/Amendment_Multiple_Sclerosis_M__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Multiple_Sclerosis_M__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Multiple Sclerosis (M)</label>
    <type>Checkbox</type>
</CustomField>