force-app/main/default/objects/Amendment__c/fields/Amendment_of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Amendment_of_Samples__c</fullName>
    <formula>Amendment_Cases__c  +  Amendment_Controls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment # of Samples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>