force-app/main/default/objects/Amendment__c/fields/Amendment_Other_Link_RT__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Other_Link_RT__c</fullName>
    <label>Amendment Other Link</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>