force-app/main/default/objects/Amendment__c/fields/Amendment_Other_Scope__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Other_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Other Scope</label>
    <type>Checkbox</type>
</CustomField>