force-app/main/default/objects/Amendment__c/fields/Amendment_Parkinsons__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Parkinsons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Parkinson&apos;s</label>
    <type>Checkbox</type>
</CustomField>