force-app/main/default/objects/Amendment__c/fields/Amendment_Prim_Sclerosing_Cholangitis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Prim_Sclerosing_Cholangitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment  Prim. Sclerosing Cholangitis</label>
    <type>Checkbox</type>
</CustomField>