force-app/main/default/objects/Amendment__c/fields/Amendment_Primary_Biliary_Cholangitis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Primary_Biliary_Cholangitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Primary Biliary Cholangitis</label>
    <type>Checkbox</type>
</CustomField>