force-app/main/default/objects/Amendment__c/fields/Amendment_Psoriasis__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Psoriasis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Psoriasis</label>
    <type>Checkbox</type>
</CustomField>