force-app/main/default/objects/Amendment__c/fields/Amendment_Pulmonary_Arterial_Hypertensn__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Pulmonary_Arterial_Hypertensn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Pulmonary Arterial Hypertens&apos;n</label>
    <type>Checkbox</type>
</CustomField>