force-app/main/default/objects/Amendment__c/fields/Amendment_RCA_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_RCA_Signature_Date__c</fullName>
    <label>Amendment RCA Signature Date</label>
    <type>Date</type>
</CustomField>