force-app/main/default/objects/Amendment__c/fields/Amendment_Renal_Disease__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Renal_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Renal Disease</label>
    <type>Checkbox</type>
</CustomField>