force-app/main/default/objects/Amendment__c/fields/Amendment_Research_Plan_Developed_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Research_Plan_Developed_Date__c</fullName>
    <label>Amendment Research Plan Developed Date</label>
    <type>Date</type>
</CustomField>