force-app/main/default/objects/Amendment__c/fields/Amendment_RNA_Sequencing__c.field-meta.xml
<CustomField>
    <fullName>Amendment_RNA_Sequencing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment RNA Sequencing</label>
    <type>Checkbox</type>
</CustomField>