force-app/main/default/objects/Amendment__c/fields/Amendment_Scleroderma__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Scleroderma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Scleroderma</label>
    <type>Checkbox</type>
</CustomField>