force-app/main/default/objects/Amendment__c/fields/Amendment_Stroke__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Stroke__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Stroke</label>
    <type>Checkbox</type>
</CustomField>