force-app/main/default/objects/Amendment__c/fields/Amendment_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Term_Years__c</fullName>
    <label>Amendment Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>