force-app/main/default/objects/Amendment__c/fields/Amendment_Type_1_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type_1_Diabetes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Type 1 Diabetes</label>
    <type>Checkbox</type>
</CustomField>