force-app/main/default/objects/Amendment__c/fields/Amendment_Vitiligo__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Vitiligo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Vitiligo</label>
    <type>Checkbox</type>
</CustomField>