force-app/main/default/objects/Amendment__c/fields/Amendment_Whole_Genome_Sequencing__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Whole_Genome_Sequencing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Whole Genome Sequencing</label>
    <type>Checkbox</type>
</CustomField>