force-app/main/default/objects/Amendment__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Amendments</relationshipLabel>
    <relationshipName>Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>