force-app/main/default/objects/Amendment__c/fields/CV_Signoff_at_ROP__c.field-meta.xml
<CustomField>
    <fullName>CV_Signoff_at_ROP__c</fullName>
    <label>Amendment CV Signoff at ROP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>