force-app/main/default/objects/Amendment__c/fields/ICF_Link__c.field-meta.xml
<CustomField>
    <fullName>ICF_Link__c</fullName>
    <label>Amendment ICF Link [LEGACY]</label>
    <type>Url</type>
</CustomField>