force-app/main/default/objects/Amendment__c/fields/Key_Amendment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Key_Amendment_Terms__c</fullName>
    <label>Key Amendment Terms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>