force-app/main/default/objects/Amendment__c/fields/Number_of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Samples__c</fullName>
    <label>Amendment # of Samples(Legacy)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>